pref: 更新界面、添加翻译进度反馈、展示日志信息 feat: 添加百度free翻译接口